# opsi-cli

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  install.sh  macos-start.sh  mypy.ini  opsi-dev-tool.yml  pyproject.toml  run-opsicli  ziplaunch.ini
CLIENT_DATA/: setup.opsiscript  uninstall.opsiscript
OPSI/: changelog.txt  control  postinst  preinst
commands/dummy/: __init__.py
commands/support/: __init__.py
opsicli/: __init__.py  __main__.py  cache.py  config.py  decorators.py  io.py  messagebus.py  opsiservice.py  plugin.py  repository.py  temp_utils.py  types.py  utils.py
opsicli/commands/: support.py
opsicli/commands/support/: __init__.py
opsicli/plugin/: __init__.py
opsicli/support/: __init__.py  collect.py  diagnose.py
plugins/bootimage/python/: __init__.py
plugins/client-action/python/: __init__.py  client_action_worker.py  execute_worker.py  host_control_worker.py  set_action_request_worker.py  trigger_event_worker.py
plugins/config/: __init__.py
plugins/config/data/: metadata.py
plugins/config/python/: __init__.py  metadata.py
plugins/crypto/python/: __init__.py
plugins/depot/python/: __init__.py  depot_execute_worker.py
plugins/jsonrpc/data/: metadata.py
plugins/jsonrpc/python/: __init__.py  metadata.py
plugins/manage-repo/python/: __init__.py  packages_metadata.py
plugins/messagebus/python/: __init__.py  websocket.py
plugins/package/data/: metadata.py
plugins/package/python/: __init__.py  install_helpers.py  package_helpers.py  package_progress.py
plugins/plugin/: __init__.py
plugins/plugin/data/: metadata.py  template.py
plugins/plugin/python/: __init__.py  metadata.py
plugins/python/python/: __init__.py
plugins/repository/python/: __init__.py  packages_metadata.py
plugins/self/python/: __init__.py
plugins/support/data/: metadata.py
plugins/support/python/: __init__.py  metadata.py  worker.py
plugins/terminal/python/: __init__.py
support/python/: __init__.py  worker.py
tests/: __init__.py  conftest.py  test_bootimage.py  test_cache.py  test_client_action.py  test_config.py  test_crypto.py  test_decorators.py  test_depot.py  test_io.py  test_jsonrpc.py  test_main.py  test_manage_repo.py  test_messagebus.py  test_opsicli.py  test_opsiservice.py  test_package.py  test_package_helpers.py  test_plugin_python.py  test_plugins.py  test_repository.py  test_self.py  test_support.py  test_terminal.py  test_utils.py  utils.py
tests/test_data/commands/dummy/: __init__.py
tests/test_data/plugins/dummy/: __init__.py
tests/test_data/plugins/dummy/python/: __init__.py
tests/test_data/plugins/package/: test-opsi-package_1.0-5.opsi  test1_1.0-5.opsi  test2_1.0-5.opsi  test2_1.0-6~custom1.opsi  test2_1.0-6~custom1.opsi.md5  test2_1.0-6~custom1.opsi.zsync  testdependency1_1.0-5.opsi  testdependency2_1.0-2.opsi  testdependency3_1.0-2.opsi  testdependency4_1.0-5.opsi  testdependency5_1.2-2.opsi  testdependency5_2-0.opsi  testdepends1_1.0-2.opsi  testdepends2_1.0-2.opsi  testdepends3_1.0-2.opsi  testdepends4_1.0-2.opsi  testdepends5_1.0-2.opsi  testdepends6_1.0-2.opsi
tests/test_data/repository/: localboot_new_42.0-1337.opsi
ziplaunch_data/: macos-start.sh
