[tool.poetry]
name = "opsi-cli"
version = "4.2.0.6"
description = "opsi command line interface"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = ["uib GmbH <info@uib.de>"]
maintainers = ["uib GmbH <info@uib.de>"]
packages = [
	{ include = "opsicli" }
]

[[tool.poetry.source]]
name = "uib"
url = "http://pypi.uib.gmbh:8080/simple/"

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.17"
click = "^8.1"
msgpack = "^1.0"
orjson = "^3.6"
pipreqs = "^0.4"
python = "^3.10,<3.12"
python-opsi-common = ">=4.3,<4.4"
rich-click = "^1.3"
starlette = "^0.22.0"
websockets = "^10.4"
prompt-toolkit = "^3.0.33"
pywin32 = {platform = "win32", version = ">=303,<304"}

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
isort = "^5.10"
mypy = "^0.991"
pyinstaller = "^5.5"
pylint = "^2.6"
pytest = "^7.1"
pytest-cov = "^4.0"
tan = "^22.8"

[tool.poetry.scripts]
opsi-cli = "opsicli.__main__:main"

[tool.black]
line-length = 140
target-version = ['py310']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
