[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opsi-cli"
version = "4.3.8.0"
description = "opsi command line interface"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = [ "uib GmbH <info@uib.de>",]
maintainers = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "opsicli"

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"
incremental = false

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.18"
click = "^8.1"
msgpack = "^1.0"
orjson = "^3.6"
pipreqs = "^0.4"
python = "^3.11,<3.12"
python-opsi-common = ">=4.3,<4.4"
rich-click = ">=1.3,<1.8"
starlette = "^0.37"
websockets = "^12.0"
prompt-toolkit = "^3.0.33"
passlib = "^1.7.4"
pydantic = "^2.5.1"
pydantic-core = "^2.18"
annotated-types = "^0.7"

[tool.poetry.scripts]
opsi-cli = "opsicli.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303,<304"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31"
ruff = "^0.5"
mypy = "^1.4"
pyinstaller = "^6.0"
pytest = "^8.0"
pytest-cov = "^4.0"
